--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,24 @@ header nav .button:hover{
     filter: brightness(1.05);
 }
 
+@import url(https://fonts.googleapis.com/css?family=Poiret+One);
+
+h1 {
+  overflow: hidden;
+  padding: 0;
+  margin: 0;
+  color: white;
+  font-family: 'Poiret One', cursive;
+  font-size: 70px;
+  font-weight: 500;
+}
+
+
+h1 {
+  margin-top: 100px;
+  letter-spacing: 7px;
+}
+
 
 h1 {
     text-align: center;
@@ -220,3 +238,6 @@ footer .footer-right {
 .heroimage {
     background-color: transparent;
 }
+
+
+
